2006-02-21  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* bonobo/bonobo-widget.c (control_new_async_cb): Missing unref on
	object.  Fixes Bug 331590: "bonobo widget code leaks CORBA Object
	reference".  Patch by Adriano Winter Bess.

2006-02-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* tools/browser/bonobo-browser.desktop.in:
	
	Update desktop file. Fix for the bugs #331647 and
	#328466. Thanks to Stephane Loeuillet and Vincent Untz.

2006-01-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: post release bump to 2.13.2

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* NEWS: release 2.13.1

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>
	
	* configure.in: depend on libgnome >= 2.13.7 since it fixes the
	previous include hack.
	
	* bonobo/bonobo-ui-init-gtk.c:
	* bonobo/bonobo-ui-preferences.c:
	* bonobo/bonobo-ui-util.c: revert previous hack.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* bonobo/bonobo-ui-init-gtk.c:
	* bonobo/bonobo-ui-preferences.c:
	* bonobo/bonobo-ui-util.c: HACK! compilation fixes manually
	including popt.h

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* bonobo/bonobo-ui-init-gtk.c: (bonobo_ui_gtk_module_info_get): Apply a
	patch from Christian Persch that makes libbonoboui use the correct
	struct member for parsing command line arguments using GOption.

2006-01-12  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-init-gtk.c: (bonobo_ui_gtk_pre_args_parse),
	(bonobo_ui_gtk_post_args_parse),
	(bonobo_ui_gtk_module_get_goption_group),
	(bonobo_ui_gtk_module_info_get): Fix leaks introduced by the
	move to GOption. (Christian Perch) Closes bug #326237.
	* configure.in: Bump version.

2006-01-06  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "mk" to ALL_LINGUAS.

2005-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Bump version to 2.13.0, and require libbonobo and