@@ -1,3 +1,11 @@
+2006-03-28  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+	* bonobo/bonobo-dock-item.c:
+	* bonobo/bonobo-dock-item.h:
+	
+	Export bonobo_dock_item_set_behavior in headers. Fix for the
+	bug #336306.
+
 2006-02-21  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>
 
 	* bonobo/bonobo-widget.c (control_new_async_cb): Missing unref on
